Final preparation for Plugin Hub submission

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Skill Data Exporter
+author=Cronotorious
+description=Exports skill data to a CSV file
+tags=skill data,skill,data,csv
+plugins=com.skilldataexporter.SkillDataExporter
