--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ tasks.withType(JavaCompile).configureEach {
 tasks.register('shadowJar', Jar) {
 	dependsOn configurations.testRuntimeClasspath
 	manifest {
-		attributes('Main-Class': 'com.example.ExamplePluginTest', 'Multi-Release': true)
+		attributes('Main-Class': 'com.skilldataexporter.SkillDataExporterTest', 'Multi-Release': true)
 	}
 
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
@@ -58,6 +58,19 @@ tasks.register('shadowJar', Jar) {
 	group = BasePlugin.BUILD_GROUP
 	archiveClassifier.set('shadow')
 	archiveFileName.set("${rootProject.name}-${project.version}-all.jar")
+}
+
+jar {
+	manifest {
+		attributes(
+				'Plugin-Version': project.version,
+				'Plugin-Id': 'skill-data-exporter',
+				'Plugin-Provider': 'Cronotorious',
+				'Plugin-Description': 'Exports skill data to a CSV file',
+				'Plugin-License': 'BSD-2-Clause',
+				'Plugin-Class': 'com.skilldataexporter.SkillDataExporter'
+		)
+	}
 }
 
 
